# claude-skill-lint

./: CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: compose.yml  devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  qlty.yml  test.yml
claudeskilllint/: cli.py
claudeskilllint/_tests/: __init__.py  test_markdown_lint.py  test_skills_validation.py  tool_requirement.py
csklint/: __init__.py  cli.py  frontmatter.py  installation.py  markdown_lint.py
csklint/_tests/: conftest.py  test_frontmatter_lint.py  test_markdown_lint.py  test_skills_validation.py
docs/: CONTRIBUTING.md
tests/: __init__.py  conftest.py  test_cli.py  test_frontmatter.py  test_installation.py  test_markdown_lint.py
tests/_tests/: __init__.py  conftest.py  test_tool_requirement.py
tests/fixtures/invalid-skills/bad-skill/: SKILL.md
tests/fixtures/skills/hello-world/: SKILL.md
tests/fixtures/skills/kitchen-sink/: SKILL.md
