[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bump-my-version",
    "invokelint[basic]>=0.19.0",
    "pytest-mock>=3.15.1",
    "pyvelocity; python_version >= '3.9'",
    "types-pyyaml",
]

[project]
name = "csklint"
version = "0.1.1"
description = "The linter for Claude Code skill."
readme = "README.md"
requires-python = ">=3.9"
# SPDX expression; replaces deprecated `license = {file = "LICENSE"}` table form and License classifier
license = "MIT"
# Retain LICENSE file discovery for sdist/wheel inclusion
license-files = ["LICENSE"]
keywords = ["csklint"]
authors = [
    {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
maintainers = [
    {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
classifiers = [
    # Scaffolded at 0.1.0; API and feature set not yet stable
    "Development Status :: 3 - Alpha",
    # Invoked from the terminal as a CLI lint command
    "Environment :: Console",
    # Targets developers who author Claude Code skill files
    "Intended Audience :: Developers",
    # Documentation and messages are in English only
    "Natural Language :: English",
    # Pure Python; no OS-specific dependencies
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    # Python 3.7 and 3.8 are EOL; minimum supported version is 3.9
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # Base topic for any developer tooling package
    "Topic :: Software Development",
    # Importable Python library in addition to CLI entry point
    "Topic :: Software Development :: Libraries :: Python Modules",
    # Core purpose: static analysis / linting of skill files
    "Topic :: Software Development :: Quality Assurance",
    # Skill files are Markdown; the linter processes Markdown syntax
    "Topic :: Text Processing :: Markup :: Markdown",
    # Includes py.typed marker for PEP 561 compliance
    "Typing :: Typed",
]
dependencies = [
    "click>=7.0",
    "pydantic>=2.0",
    "pytest>=7.0",
    "pyyaml>=6.0",
]

[project.urls]
homepage = "https://github.com/yukihiko-shinoda/claude-skill-lint"
# documentation = "https://readthedocs.org"
repository = "https://github.com/yukihiko-shinoda/claude-skill-lint"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.entry-points.console_scripts]
csklint = "csklint.cli:csklint"

[tool.bandit.assert_used]
skips = ["tests/*", "csklint/_tests/*"]

[tool.bumpversion]
current_version = "0.1.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "csklint/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.report]
exclude_also = [
    # Assume `if TYPE_CHECKING: ... else: ...` block is covered · Issue #831 · nedbat/coveragepy
    #   https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
    "if TYPE_CHECKING:",
    # Pylint will detect instead:
    # - abstract-method / W0223 - Pylint 2.17.0-dev0 documentation
    #   https://pylint.readthedocs.io/en/latest/user_guide/messages/warning/abstract-method.html
    "raise NotImplementedError",
]

[tool.docformatter]
recursive = true
# For compatibility with Black
# - How to Configure docformatter — docformatter 1.7.5 documentation
#   https://docformatter.readthedocs.io/en/stable/configuration.html#a-note-on-options-to-control-styles
pre_summary_space = true
wrap-descriptions = 119
wrap-summaries = 119
[tool.flake8]
# Since B950 in flake8-bugbear detects lines that exceed max_line_length by more than 10%:
# - PyCQA/flake8-bugbear: A plugin for Flake8 finding likely bugs and design problems in your program. Contains warnings that don't belong in pyflakes and pycodestyle.
#   https://github.com/PyCQA/flake8-bugbear?tab=readme-ov-file#opinionated-warnings
# This setting follows the Black documentation in case when we use flake8-bugbear:
# - Using Black with other tools - Black 25.1.0 documentation
#   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
# Set max_line_length to account for B950's 10% allowance to maintain consistency with pyvelocity
max_line_length = 108
extend_ignore = [
  # For compatibility with Black:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "E203",
  "E501",
  "E701",
  # 2025-05-24 Now openstack/hacking wasn't introduced into Ruff and sorting imports is mainly considered with isort.
  "H306",
  # Cohesion may be in experimental.
  "H601",
]
statistics = true
show_source = true
exclude = [
  ".venv",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.pylint]
disable = [
    # We check line length by flake8-bugbear B950.
    "line-too-long",
]
[tool.pylint.basic]
docstring-min-length = "7"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.options]
# Since this rule against single responsibility principle.
# - python - Why does Pylint want two public methods per class? - Stack Overflow
#   https://stackoverflow.com/a/40258006/12721873
min-public-methods = "1"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# The bundled suite (csklint/_tests) hard-fails when skill-validator / markdownlint-cli2 are not
# installed, so bare `pytest` does not collect it directly. It is exercised end-to-end (real binaries, no
# mocks) by tests/test_cli.py (marked slow) against tests/fixtures/skills, and can be run against a real
# skills directory via `csklint run`, which passes its path.
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
external = [
    "DUO",  # dlint
    "H",    # Openstack/hacking
]
select = [
    "ALL",
    # Since compatible with PEP257, we can check docstring style by Ruff and don't need to consider about docstring style separately:
    # - Should the first line of a Python function docstring be in imperative mood? (ruff / pydocstyle D401)
    #   https://zenn.dev/y_shinoda/articles/pydocstyle-d401
    "D401",    # First line should be in imperative mood
]
ignore = [
    # lint.pydocstyle
    # Reason: Docstring may be missed since docstring-min-length is set.
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    # Reason: Google styleguide changes from `rather than imperative` to `or imperative` and PEP 257 says `prescribes as command`:
    # - styleguide/pyguide.md at 3c5c895c68bfb108cd5d936937dc36e2dfbdbcc2 · google/styleguide
    #   https://github.com/google/styleguide/blob/3c5c895c68bfb108cd5d936937dc36e2dfbdbcc2/pyguide.md?plain=1#L2072-L2077
    # - Project import generated by Copybara. · google/styleguide@ec302b3
    #   https://github.com/google/styleguide/commit/ec302b363edada1d696c476dcaf69f310755f823#diff-e1f2a5c0feebbf5a01e735ab87d79b4bec2e684f40a67d37d1b69ffa0397b60eL1985
    # - PEP 257 – Docstring Conventions | peps.python.org
    #   https://peps.python.org/pep-0257/#one-line-docstrings
    "D401",    # First line should be in imperative mood
    # Reason: First line may ends with function signature for expression.
    "D402",    # First line should not be the function’s “signature”
    # Reason: First line may ends with ":" for expression.
    "D415",    # First line should end with a period, question mark, or exclamation point
    # Reason: `Line too long` is checked by flake8-bugbear.
    "E501",    # Line too long ({width} > {limit})
]
unfixable = [
    # When fix `return a and b != ""` as `return a and b`, mypy will report warning:
    #   error: Incompatible return value type (got "Union[Literal[False], str]", expected "bool")  [return-value]
    "PLC1901",
]

[tool.ruff.lint.isort]
# To follow H301: Do not import more than one module per line (*) in Flake8 + openstack/hacking
force-single-line = true

[tool.ruff.lint.mccabe]
# The default value: 10 is too loose,
# 5 is as same as the default value of Radon for A rank that we use without any problems for a decade.
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"csklint/_tests/*" = ["S101"]

[tool.ruff.lint.pyupgrade]
# Pydantic evaluates model field annotations at runtime, and PEP 604 unions (`X | None`) raise TypeError on
# Python 3.9 (the minimum supported version) even under `from __future__ import annotations`. Keep
# `Optional`/`Union` spellings instead of letting UP006/UP007/UP045 rewrite them.
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.uv]
# setuptools>=77 only soft-checks for packaging.licenses (try/except, no declared install-time
# dependency) when validating the SPDX `license = "MIT"` expression above. Without this floor, an
# unrelated dependency can transiently drag `packaging` below 24.2 on a given resolution (uv.lock is
# intentionally not committed; see .gitignore), raising "Cannot import `packaging.licenses`" at
# invoke/tasks.py import time via package-discovery's Setuptools().
constraint-dependencies = ["packaging>=24.2"]
